--- a/resources/views/home.html
+++ b/resources/views/home.html
@@ -2,14 +2,14 @@
 
 {{define "main"}}
 <h2>博客列表</h2>
-    {{if .}}
+    {{if .Blogs}}
     <table>
         <tr>
             <th>Title</th>
             <th>Created</th>
             <th>ID</th>
         </tr>
-        {{range .}}
+        {{range .Blogs}}
         <tr>
             <td><a href='/blog/view?id={{.ID}}'>{{.Title}}</a></td>
             <td>{{humanDate .CreatedAt}}</td>
