--- a/resources/views/home.html
+++ b/resources/views/home.html
@@ -5,8 +5,8 @@
     {{if .Blogs}}
     <table>
         <tr>
-            <th>Title</th>
-            <th>Created</th>
+            <th>标题</th>
+            <th>创建时间</th>
             <th>ID</th>
         </tr>
         {{range .Blogs}}
