--- a/resources/views/partials/nav.html
+++ b/resources/views/partials/nav.html
@@ -2,6 +2,7 @@
 <nav>
     <div>
         <a href='/'>首页</a>
+        <a href='/about'>关于</a>
         {{if .IsAutheticated}}
         <a href='/blog/create'>创建博客</a>
         {{end}}
